--- a/backend/routes/templates/landing.css
+++ b/backend/routes/templates/landing.css
@@ -1,12 +1,74 @@
-body {
-    background:
-    url(https://eskipaper.com/images/music-wallpaper-19.jpg);
-    background-size: cover;
-    padding-top: 2%; 
-    padding-bottom: 15%;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
-#block {
-    font-family: sans-serif;
-    color:white
+.container {
+    height: 100vh;
+    width: 100%;
+    background-image: url(image.png);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.content {
+    width: 100%;
+    position: absolute;
+    top: 30%;
+}
+
+.button {
+    border: none;
+    position: relative;
+    right: 250px;
+    top: 250px;
+    color: pink;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  .button:hover {
+    background-color: mintcream;
+    color: white;
+  }
+
+.left-col{
+    margin-left: 6%;
+}
+
+.left-col h1{
+    font-size: 90px;
+    color: #fff;
+    line-height: 110px;
+    float: left;
+}
+
+.right-col {
+    float: right;
+    margin-right: 6%;
+    margin-top: 120px;
+    display: flex;
+    align-items: center;
+}
+
+.right-col p{
+    font-size: 35px;
+    font-weight: 500;
+    color: #fff;
+    line-height: 110px;
+    margin-right: 5px;
+    float: right;
+}
+
+#icon {
+    width: 80px;
+    cursor: pointer;
 }
